Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Object var)
    end
end
